--- a/ansible/install_applications/vars/infra-zonemta.yml
+++ b/ansible/install_applications/vars/infra-zonemta.yml
@@ -4,7 +4,7 @@ _zonemta_var_loader:
   base_image:
     repo: "docker.io"
     name: "library/node"
-    tag: "19.3.0-alpine3.17"
+    tag: "19.6.0-alpine3.17"
   version: 3.5.1
   namespace: "infra-zonemta"
 
@@ -58,7 +58,7 @@ _zonemta_mongo_var_loader:
   base_image:
     repo: "docker.io"
     name: "library/mongo"
-    tag: "6.0.3-focal"
+    tag: "6.0.4-jammy"
 
 zonemta_mongo:
   base_image: "{{ _zonemta_mongo_var_loader.base_image }}"
@@ -94,7 +94,7 @@ _zonemta_redis_var_loader:
   base_image:
     repo: "docker.io"
     name: "library/redis"
-    tag: "7.0.7-alpine3.17"
+    tag: "7.0.8-alpine3.17"
 
 zonemta_redis:
   base_image: "{{ _zonemta_redis_var_loader.base_image }}"
