Add support for external categories and services

--- a/ansible/install_applications/roles/tool_homepage_deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/tool_homepage_deploy/defaults/main.yml
@@ -3,3 +3,15 @@ homepage_enabled: true
 
 homepage_config_title: "Demo homepage"
 homepage_config_greeting: "Welcome !"
+
+#homepage_config_external_categories:
+#  Category Name:
+#    icon: mdi-ab-testing
+#
+#homepage_config_external_services:
+#- Category Name:
+#  - Service Name:
+#      icon: google
+#      description: External service example
+#      href: https://www.google.com
+#      ping: https://www.google.com
