--- a/ansible/install_applications/vars/tool-homepage.yml
+++ b/ansible/install_applications/vars/tool-homepage.yml
@@ -34,3 +34,27 @@ homepage:
     greeting: "{{ homepage_config_greeting | default('') }}"
     external_categories: "{{ homepage_config_external_categories | default({}) }}"
     external_services: "{{ homepage_config_external_services | default([]) }}"
+    unifi:
+      enabled: "{{ homepage_config_unifi_enabled | default('false') | bool }}"
+      username: "{{ homepage_config_unifi_username | default('') }}"
+      password: "{{ homepage_config_unifi_password | default('') }}"
+    miniflux:
+      enabled: "{{ homepage_config_miniflux_enabled | default('false') | bool }}"
+      apikey: "{{ homepage_config_miniflux_apikey | default('') }}"
+    paperless:
+      enabled: "{{ homepage_config_paperless_enabled | default('false') | bool }}"
+      username: "{{ homepage_config_paperless_username | default('') }}"
+      password: "{{ homepage_config_paperless_password | default('') }}"
+    deluge:
+      enabled: "{{ homepage_config_deluge_enabled | default('false') | bool }}"
+      password: "{{ deluge_web.daemon_user.password }}"
+    pyload:
+      enabled: "{{ homepage_config_pyload_enabled | default('false') | bool }}"
+      username: "{{ homepage_config_pyload_username | default('') }}"
+      password: "{{ homepage_config_pyload_password | default('') }}"
+    sabnzbd:
+      enabled: "{{ homepage_config_sabnzbd_enabled | default('false') | bool }}"
+      apikey: "{{ sabnzbd.api_key }}"
+    jellyfin:
+      enabled: "{{ homepage_config_jellyfin_enabled | default('false') | bool }}"
+      apikey: "{{ homepage_config_jellyfin_apikey | default('') }}"
