Fix deluge local user password

--- a/ansible/inventories/vagrant/group_vars/all/apps/download-deluge.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/download-deluge.yml
@@ -1,4 +1,4 @@
 ---
 deluge_web_password: Passw0rd
-deluge_local_user_password: PasswOrd
+deluge_local_user_password: Passw0rd
 deluge_web_user_password: Passw0rd
