Disable default greeting

--- a/ansible/install_applications/roles/tool_homepage_deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/tool_homepage_deploy/defaults/main.yml
@@ -2,7 +2,7 @@
 homepage_enabled: true
 
 homepage_config_title: "Demo homepage"
-homepage_config_greeting: "Welcome !"
+#homepage_config_greeting: "Welcome !"
 
 #homepage_config_external_categories:
 #  Category Name:
