--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -39,6 +39,10 @@
   tags: kubernetes-app-infra-gotify
   when: gotify_enabled | bool
 
+- import_playbook: app-infra-ntfy.yml
+  tags: kubernetes-app-infra-ntfy
+  when: ntfy_enabled | bool
+
 - import_playbook: app-infra-gandi-livedns.yml
   tags: kubernetes-app-infra-gandi-livedns
   when: gandi_livedns_enabled | bool
