Disable gather_facts for all apps playbook

--- a/ansible/install_applications/app-infra-kubernetes-dashboard.yml
+++ b/ansible/install_applications/app-infra-kubernetes-dashboard.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision infra-dashboard
   hosts: controller
+  gather_facts: no
   roles:
     - role: infra_kubernetes_dashboard_deploy
