--- a/ansible/install_applications/app-monitoring-keepalived-exporter.yml
+++ b/ansible/install_applications/app-monitoring-keepalived-exporter.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision monitoring-keepalived-exporter
   hosts: controller
+  gather_facts: no
   roles:
     - role: monitoring_keepalived_exporter_deploy
