--- a/ansible/install_applications/app-monitoring-release-watcher.yml
+++ b/ansible/install_applications/app-monitoring-release-watcher.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision monitoring-release-watcher
   hosts: controller
+  gather_facts: no
   roles:
     - role: monitoring_release_watcher_deploy
