--- a/ansible/install_applications/app-infra-gandi-livedns.yml
+++ b/ansible/install_applications/app-infra-gandi-livedns.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision infra-gandi-livedns
   hosts: controller
+  gather_facts: no
   roles:
     - role: infra_gandi_livedns_deploy
