--- a/ansible/install_applications/app-infra-intel-gpu-plugin.yml
+++ b/ansible/install_applications/app-infra-intel-gpu-plugin.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision infra-intel-gpu-plugin
   hosts: controller
+  gather_facts: no
   roles:
     - role: infra_intel_gpu_plugin_deploy
