--- a/ansible/install_applications/app-infra-kubernetes-metrics-server.yml
+++ b/ansible/install_applications/app-infra-kubernetes-metrics-server.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision infra-kubernetes-metrics-server
   hosts: controller
+  gather_facts: no
   roles:
     - role: infra_kubernetes_metrics_server_deploy
