--- a/ansible/install_applications/app-logging-elasticsearch.yml
+++ b/ansible/install_applications/app-logging-elasticsearch.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision logging-elasticsearch
   hosts: controller
+  gather_facts: no
   roles:
     - role: logging_elasticsearch_deploy
