--- a/ansible/install_applications/app-monitoring-blackbox-exporter.yml
+++ b/ansible/install_applications/app-monitoring-blackbox-exporter.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision monitoring-blackbox-exporter
   hosts: controller
+  gather_facts: no
   roles:
     - role: monitoring_blackbox_exporter_deploy
