--- a/ansible/install_applications/app-monitoring-kube-state-metrics.yml
+++ b/ansible/install_applications/app-monitoring-kube-state-metrics.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision monitoring-kube-state-metrics
   hosts: controller
+  gather_facts: no
   roles:
     - role: monitoring_kube_state_metrics_deploy
