--- a/ansible/install_applications/app-monitoring-kubernetes.yml
+++ b/ansible/install_applications/app-monitoring-kubernetes.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision monitoring-kubernetes
   hosts: controller
+  gather_facts: no
   roles:
     - role: monitoring_kubernetes_deploy
