--- a/ansible/install_applications/app-monitoring-nginx-exporter.yml
+++ b/ansible/install_applications/app-monitoring-nginx-exporter.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision  monitoring-nginx-exporter
   hosts: controller
+  gather_facts: no
   roles:
     - role: monitoring_nginx_exporter_deploy
