--- a/ansible/install_applications/app-monitoring-prometheus-operator.yml
+++ b/ansible/install_applications/app-monitoring-prometheus-operator.yml
@@ -1,5 +1,6 @@
 ---
 - name: Provision monitoring-prometheus-operator
   hosts: controller
+  gather_facts: no
   roles:
     - role: monitoring_prometheus_operator_deploy
