Manage ntfy users and acl

--- a/ansible/install_applications/roles/infra_ntfy_deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/infra_ntfy_deploy/defaults/main.yml
@@ -1,2 +1,19 @@
 ---
 ntfy_enabled: true
+
+#ntfy_users:
+#- name: admin_local
+#  password: Passw0rd
+#  admin: yes
+#- name: user_local
+#  password: Passw0rd
+#  admin: no
+#  permissions:
+#  - topic: "*"
+#    permission: read-only
+#- name: app_x
+#  password: Passw0rd
+#  admin: no
+#  permissions:
+#  - topic: "appx*"
+#    permission: write-only
