Configure homeassistant to send notifications with Ntfy

--- a/ansible/install_applications/roles/infra_ntfy_deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/infra_ntfy_deploy/defaults/main.yml
@@ -1,6 +1,11 @@
 ---
 ntfy_enabled: true
 
+#ntfy_homeassistant_enabled: True
+#ntfy_homeassistant_username: "homeassistant"
+#ntfy_homeassistant_password: "Passw0rd"
+#ntfy_homeassistant_topic: home
+
 #ntfy_users:
 #- name: admin_local
 #  password: Passw0rd
