--- a/ansible/install_applications/vars/infra-ntfy.yml
+++ b/ansible/install_applications/vars/infra-ntfy.yml
@@ -14,9 +14,9 @@ ntfy:
   base_image: "{{ _ntfy_var_loader.base_image }}"
   private_image:
     repo: "{{ docker_private_registry.url }}"
-    name: "ntfy"
+    name: "{{ _ntfy_var_loader.base_image.name | regex_replace('.*/', '') }}"
     tag: "{{ _ntfy_var_loader.base_image.tag }}"
-  servername: "ntfy.{{ _ntfy_var_loader.namespace }}.svc.cluster.local"
+  internal_url: "http://ntfy.{{ _ntfy_var_loader.namespace }}.svc.cluster.local:8080"
 
   app_backup:
     name: infra-ntfy
@@ -46,3 +46,9 @@ ntfy:
       data: "{{ ntfy_container_storage_data | default('128M') }}"
 
   users: "{{ ntfy_users | default([])}}"
+  
+  homeassistant:
+    enabled: "{{ ntfy_homeassistant_enabled | default(True) }}"
+    username: "{{ ntfy_homeassistant_username | default('user') }}"
+    password: "{{ ntfy_homeassistant_password | default('Passw0rd') }}"
+    topic: "{{ ntfy_homeassistant_topic | default('home') }}"
