--- a/ansible/inventories/vagrant/group_vars/all/apps/infra-ntfy.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/infra-ntfy.yml
@@ -1,5 +1,10 @@
 ---
 
+ntfy_homeassistant_enabled: True
+ntfy_homeassistant_username: "homeassistant"
+ntfy_homeassistant_password: "Passw0rd"
+ntfy_homeassistant_topic: home
+
 ntfy_users:
 - name: admin_local
   password: Passw0rd
@@ -10,3 +15,9 @@ ntfy_users:
   permissions:
   - topic: "*"
     permission: read-only
+- name: "{{ ntfy_homeassistant_username }}"
+  password: "{{ ntfy_homeassistant_password }}"
+  admin: no
+  permissions:
+  - topic: "{{ ntfy_homeassistant_topic }}*"
+    permission: write-only
