--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/defaults/main.yml
@@ -1,7 +1,5 @@
 ---
 prometheus_operator_enabled: true
-#alertmanager_default_receiver: default
-#alertmanager_receivers:
-# - name: "{{ alertmanager_default_receiver }}"
-#   emails_to:
-#     - whatever@gmail.com
+#alertmanager_default_receiver_name: default
+#alertmanager_default_receiver_emails_to:
+#- whatever@gmail.com
