--- a/ansible/install_applications/roles/infra_ntfy_deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/infra_ntfy_deploy/defaults/main.yml
@@ -1,6 +1,10 @@
 ---
 ntfy_enabled: true
 
+#ntfy_alertmanager_username: "alertmanager"
+#ntfy_alertmanager_password: "Passw0rd"
+#ntfy_alertmanager_topic: alerts
+
 #ntfy_homeassistant_enabled: True
 #ntfy_homeassistant_username: "homeassistant"
 #ntfy_homeassistant_password: "Passw0rd"
