--- a/ansible/install_applications/vars/download-pyload.yml
+++ b/ansible/install_applications/vars/download-pyload.yml
@@ -5,11 +5,8 @@ _pyload_var_loader:
   base_image:
     repo: "docker.io"
     name: "library/python"
-    tag: "2.7.18-alpine3.11"
-  repo:
-    name: "pyload/pyload"
-    branch: "stable"
-    commit: "ca436e917f2f7437a09954cdca6b36e8824864bd"
+    tag: "3.11.1-slim-bullseye"
+  version: 0.5.0b3.dev53
 
 pyload:
   enabled: "{{ pyload_enabled | default(True) }}"
@@ -18,11 +15,9 @@ pyload:
   base_image: "{{ _pyload_var_loader.base_image }}"
   private_image:
     repo: "{{ docker_private_registry.url }}"
-    name: "pyload"
-    tag: "{{ _pyload_var_loader.repo.commit }}_{{ _pyload_var_loader.base_image.name | regex_replace('.*/', '') }}{{ _pyload_var_loader.base_image.tag }}"
-  repo: "{{ _pyload_var_loader.repo }}"
-  branch: "{{ _pyload_var_loader.repo.branch }}"
-  commit: "{{ _pyload_var_loader.repo.commit }}"
+    name: "pyload-ng"
+    tag: "{{ _pyload_var_loader.version }}_{{ _pyload_var_loader.base_image.name | regex_replace('.*/', '') }}{{ _pyload_var_loader.base_image.tag }}"
+  version: "{{ _pyload_var_loader.version }}"
 
   app_backup:
     name: download-pyload
