--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/podmonitorCustomResourceDefinition.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/podmonitorCustomResourceDefinition.yaml
@@ -194,6 +194,10 @@ spec:
                             - Lowercase
                             - uppercase
                             - Uppercase
+                            - keepequal
+                            - KeepEqual
+                            - dropequal
+                            - DropEqual
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source label values.
@@ -337,6 +341,10 @@ spec:
                             - Lowercase
                             - uppercase
                             - Uppercase
+                            - keepequal
+                            - KeepEqual
+                            - dropequal
+                            - DropEqual
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source label values.
