--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/probeCustomResourceDefinition.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/probeCustomResourceDefinition.yaml
@@ -155,6 +155,10 @@ spec:
                       - Lowercase
                       - uppercase
                       - Uppercase
+                      - keepequal
+                      - KeepEqual
+                      - dropequal
+                      - DropEqual
                       type: string
                     modulus:
                       description: Modulus to take of the hash of the source label values.
@@ -334,6 +338,10 @@ spec:
                               - Lowercase
                               - uppercase
                               - Uppercase
+                              - keepequal
+                              - KeepEqual
+                              - dropequal
+                              - DropEqual
                               type: string
                             modulus:
                               description: Modulus to take of the hash of the source label values.
@@ -427,6 +435,10 @@ spec:
                               - Lowercase
                               - uppercase
                               - Uppercase
+                              - keepequal
+                              - KeepEqual
+                              - dropequal
+                              - DropEqual
                               type: string
                             modulus:
                               description: Modulus to take of the hash of the source label values.
