--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/alertmanagerCustomResourceDefinition.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/alertmanagerCustomResourceDefinition.yaml
@@ -1800,7 +1800,7 @@ spec:
                   x-kubernetes-map-type: atomic
                 type: array
               initContainers:
-                description: 'InitContainers allows adding initContainers to the pod definition. Those can be used to e.g. fetch secrets for injection into the Alertmanager configuration from external sources. Any errors during the execution of an initContainer will lead to a restart of the Pod. More info: https://kubernetes.io/docs/concepts/workloads/pods/init-containers/ Using initContainers for any use case other then secret fetching is entirely outside the scope of what the maintainers will support and by doing so, you accept that this behaviour may break at any time without notice.'
+                description: 'InitContainers allows adding initContainers to the pod definition. Those can be used to e.g. fetch secrets for injection into the Alertmanager configuration from external sources. Any errors during the execution of an initContainer will lead to a restart of the Pod. More info: https://kubernetes.io/docs/concepts/workloads/pods/init-containers/ InitContainers described here modify an operator generated init containers if they share the same name and modifications are done via a strategic merge patch. The current init container name is: `init-config-reloader`. Overriding init containers is entirely outside the scope of what the maintainers will support and by doing so, you accept that this behaviour may break at any time without notice.'
                 items:
                   description: A single application container that you want to run within a pod.
                   properties:
@@ -2649,7 +2649,8 @@ spec:
                     type: string
                 type: object
               portName:
-                description: Port name used for the pods and governing service. This defaults to web
+                default: web
+                description: Port name used for the pods and governing service. Defaults to `web`.
                 type: string
               priorityClassName:
                 description: Priority class assigned to the Pods
