Configure TLS for Crowdsec

--- a/ansible/install_applications/roles/infra_crowdsec_deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/infra_crowdsec_deploy/defaults/main.yml
@@ -5,3 +5,6 @@ crowdsec_agent_config_collections:
   - crowdsecurity/linux
   - crowdsecurity/sshd
   - crowdsecurity/nginx
+
+crowdsec_lapi_config_tls_bouncers_ou: []
+crowdsec_lapi_config_tls_agents_ou: []
