--- a/ansible/install_applications/roles/app_base_deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/app_base_deploy/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 custom_ssl_pki_generation_root_dir: /etc/ssl/custom
+crowdsec_ssl_pki_generation_root_dir: /etc/ssl/crowdsec
 kubernetes_nas_nfs_storage_class_name: nas-nfs
 
 restic_bin_path: /usr/local/bin/restic
