--- a/ansible/install_applications/roles/infra_crowdsec_deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra_crowdsec_deploy/tasks/main.yml
@@ -10,6 +10,23 @@
     base_image: "{{ crowdsec.base_image }}"
     private_image: "{{ crowdsec.private_image }}"
 
+- name: Read ca certificate files
+  ansible.builtin.slurp:
+    src: "{{ item }}"
+  register: crowdsec_ca_certificate_files
+  with_items:
+    - "{{ crowdsec_ssl_pki_generation_root_dir }}/ca.crt"
+    - "{{ crowdsec_ssl_pki_generation_root_dir }}/client_intermediate_ca.crt"
+    - "{{ crowdsec_ssl_pki_generation_root_dir }}/server_intermediate_ca.crt"
+
+- name: Read LAPI certificate files
+  ansible.builtin.slurp:
+    src: "{{ item }}"
+  register: crowdsec_lapi_certificate_files
+  with_items:
+    - "{{ crowdsec_ssl_pki_generation_root_dir }}/server/server-chain.crt"
+    - "{{ crowdsec_ssl_pki_generation_root_dir }}/server/server.key"
+
 - name: Deploy Crowdsec
   kubernetes.core.k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
