--- a/ansible/install_infra/roles/crowdsec_firewall_bouncer/handlers/main.yml
+++ b/ansible/install_infra/roles/crowdsec_firewall_bouncer/handlers/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Reload systemd daemon
+  ansible.builtin.systemd:
+    daemon_reload: yes
+
 - name: Restart Crowdsec firewall bouncer
   ansible.builtin.service:
     name: crowdsec-firewall-bouncer.service
