--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -123,6 +123,10 @@
   tags: kubernetes-app-monitoring-grafana
   when: grafana_enabled | bool
 
+- import_playbook: app-monitoring-crowdsec-external.yml
+  tags: kubernetes-app-monitoring-crowdsec-external
+  when: crowdsec_external_enabled | bool
+
 - import_playbook: app-tool-homepage.yml
   tags: kubernetes-app-tool-homepage
   when: homepage_enabled | bool
